--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Outside of work, I stay hands-on with code through personal projects. My most re
 
 									<div class="features">
 										<article>
-  <a class="image"><img src="images/assurant-product-owner.jpg" alt="Assurant Technical Product Owner" /></a>
+  <a class="image"><img src="images/Assurant_Logo.jpg" alt="Assurant Technical Product Owner" /></a>
   <div class="inner">
     <h4>Technical Product Owner – Assurant</h4>
     <p>
@@ -106,7 +106,7 @@ Outside of work, I stay hands-on with code through personal projects. My most re
   </div>
 </article>
 <article>
-  <a class="image"><img src="images/assurant-engineer.jpg" alt="Assurant Software Engineer" /></a>
+  <a class="image"><img src="images/Assurant_Logo.jpg" alt="Assurant Software Engineer" /></a>
   <div class="inner">
     <h4>Software Engineer – Assurant</h4>
     <p>
